# bitcoinMiner

./: .gitattributes  .gitignore  Bitcoin_miner.sln  Bitcoin_miner.vcxproj  Bitcoin_miner.vcxproj.filters  CMakeLists.txt  Readme.md  main.cpp  sha256.cpp  utility.cpp
src/: CMakeLists.txt  main.cpp  miner.cpp  miner.h  sha256.cpp  sha256.h  utility.cpp  utility.h
